# axum-example

./: .env  Cargo.toml
.sqlx/: query-14085e615f8968b9958354e8f5e07df3775014b09c54852f2ad963c62fbe46be.json  query-2911f43eea71e3e9d011dc58eca0f6988b37ecd1ecb2c0aba25996b4775d7051.json
public/: index.html
src/: main.rs
