[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.1", features = ["cors", "fs"] }
